# pilotx-agent

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
evals/: main.py
evals/agent/: __init__.py
evals/agent/commons/: __init__.py  abstract.py  entities.py  scorers.py  utils.py
evals/agent/orchestrator/: __init__.py  evaluate.py
notebooks/: prompt-optimiser.ipynb
resources/: config-schema.yaml  logging.yaml
resources/config/: config.yaml  staging.yaml
service/: initialize.py  main.py  run_servers.py  validations.py
src/pilotx_agent/: __init__.py  agent.py
src/pilotx_agent/a2a/: __init__.py  server.py
src/pilotx_agent/agents/: __init__.py  abstract.py  business_analyst.py  data_analyst.py  faq_proposer.py  orchestrator.py  workflow.py
src/pilotx_agent/agents/entities/: __init__.py  completions.py  config.py
src/pilotx_agent/agents/plugins/: __init__.py  jail_break.py
src/pilotx_agent/agents/tools/: __init__.py  search_web.py
src/pilotx_agent/agents/utils/: __init__.py  cost_estimator.py  tool_wrapper.py
src/pilotx_agent/auth/: __init__.py  firebase.py
src/pilotx_agent/config/: app.py
src/pilotx_agent/executors/: __init__.py  agent_executor.py
src/pilotx_agent/storage/: firestore.py
src/pilotx_agent/utils/: __init__.py  error_handler.py  exceptions.py
